# esy-hello-native-ctypes

./: .gitignore  README.md  esy.lock.json  package.json
esy.lock/: index.json
ges-ffi/: dune_backup
ges-ffi/bindings/: ges_bindings.ml
ges-ffi/c/: dune  dune-backup
ges-ffi/lib/: dune  ges.ml
ges-ffi/stubgen/: dune
